--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id="presentation">
             <h2>Présentation</h2>
-            <img src="photo/photovisage.png" alt="Photo de Célia Zuk" style="display: block; margin: 20px auto; border-radius: 50%; width: 150px;">
+            <img src="Photo/Photovisage.png" alt="Photo de Célia Zuk" style="display: block; margin: 20px auto; border-radius: 50%; width: 150px;">
 			<h3> Présentation générale :</h3>
             <p>Bonjour, je m'appelle Célia Zuk, je suis actuellement en deuxième année de Bachelor universitaire de technologie en sciences des données parcours exploration et modélisation statistique. Je réalise mon BUT au sein de l'IUT Paris - Rives de Seine, situé à Paris dans le 16ème arrondissement. Passionnée par l’analyse et la visualisation des données, j’ai développé des compétences en programmation (R, Python, SAS, SQL) et en création de tableaux de bord interactifs avec Power BI et Excel. </p>
 			
@@ -72,27 +72,27 @@
             <h3>Programmation :</h3>
             <div class="competences">
                 <div class="competence">
-                    <img src="photo/logoR.png" alt="R">
+                    <img src="Photo/logoR.png" alt="R">
                     <p>R</p>
 					<a href="https://fr.wikipedia.org/wiki/R_(langage)">En savoir plus sur R</a>
                 </div>
                 <div class="competence">
-                    <img src="photo/logopython.png" alt="Python">
+                    <img src="Photo/logopython.png" alt="Python">
                     <p>Python</p>
 					<a href="https://fr.wikipedia.org/wiki/Python_(langage)">En savoir plus sur Python</a>
                 </div>
                 <div class="competence">
-                    <img src="photo/logosql.png" alt="SQL">
+                    <img src="Photo/logosql.png" alt="SQL">
                     <p>SQL</p>
 					<a href="https://fr.wikipedia.org/wiki/Structured_Query_Language">En savoir plus sur SQL</a>
                 </div>
                 <div class="competence">
-                    <img src="photo/logosas.png" alt="SAS">
+                    <img src="Photo/logosas.png" alt="SAS">
                     <p>SAS</p>
 					<a href="https://fr.wikipedia.org/wiki/SAS_(langage)">En savoir plus sur SAS</a>
                 </div>
 				<div class="competence">
-                    <img src="photo/logohtml.png" alt="R">
+                    <img src="Photo/logohtml.png" alt="R">
                     <p>HTML</p>
 					<a href="https://fr.wikipedia.org/wiki/Hypertext_Markup_Language">En savoir plus sur HTML</a>
                 </div>
@@ -100,27 +100,27 @@
             <h3>Outils :</h3>
             <div class="competences">
                 <div class="competence">
-                    <img src="photo/logoexcel.png" alt="Excel">
+                    <img src="Photo/logoexcel.png" alt="Excel">
                     <p>Excel</p>
 					<a href="https://fr.wikipedia.org/wiki/Microsoft_Excel">En savoir plus sur EXCEL</a>
                 </div>
                 <div class="competence">
-                    <img src="photo/logopowerbi.png" alt="Power BI">
+                    <img src="Photo/logopowerbi.png" alt="Power BI">
                     <p>Power BI</p>
 					<a href="https://fr.wikipedia.org/wiki/Microsoft_Power_BI">En savoir plus sur Power BI</a>
                 </div>
 				<div class="competence">
-                    <img src="photo/logoword.png" alt="Word">
+                    <img src="Photo/logoword.png" alt="Word">
                     <p>Word</p>
 					<a href="https://fr.wikipedia.org/wiki/Microsoft_Word">En savoir plus sur Word</a>
                 </div>
 				<div class="competence">
-                    <img src="photo/logopowerpoint.png" alt="PowerPoint">
+                    <img src="Photo/logopowerpoint.png" alt="PowerPoint">
                     <p>PowerPoint</p>
 					<a href="https://fr.wikipedia.org/wiki/Microsoft_PowerPoint">En savoir plus sur PowerPoint</a>
                 </div>
 				<div class="competence">
-                    <img src="photo/logocanva.png" alt="CANVA">
+                    <img src="Photo/logocanva.png" alt="CANVA">
                     <p>CANVA</p>
 					<a href="https://fr.wikipedia.org/wiki/Canva">En savoir plus sur Canva</a>
                 </div>
@@ -128,34 +128,34 @@
             <h3>Statistiques :</h3>
             <div class="competences">
                 <div class="competence">
-                    <img src="photo/logostat.png" alt="Statistiques">
+                    <img src="Photo/logostat.png" alt="Statistiques">
                     <p>Analyse et exploitation statistique de données, traitement de données d’enquête</p>
                 </div>
 				<div class="competence">
-                    <img src="photo/logostat.png" alt="Statistiques">
+                    <img src="Photo/logostat.png" alt="Statistiques">
                     <p>Requêtage, extraction, gestion, structuration et traitement de bases de données</p>
                 </div>
 				<div class="competence">
-                    <img src="photo/logostat.png" alt="Statistiques">
+                    <img src="Photo/logostat.png" alt="Statistiques">
                     <p>Programmation, Programmation statistique</p>
                 </div>
 				<div class="competence">
-                    <img src="photo/logostat.png" alt="Statistiques">
+                    <img src="Photo/logostat.png" alt="Statistiques">
                     <p>Reporting, Visualisation de données</p>
                 </div>
             </div>
 			<h3>Autres :</h3>
             <div class="competences">
                 <div class="competence">
-                    <img src="photo/logorapport.png" alt="Autres">
+                    <img src="Photo/logorapport.png" alt="Autres">
                     <p>Rédaction de rapport</p>
                 </div>
 				<div class="competence">
-                    <img src="photo/logooral.png" alt="Autres">
+                    <img src="Photo/logooral.png" alt="Autres">
                     <p>Présentation orale</p>
                 </div>
 				<div class="competence">
-                    <img src="photo/logoequipe.png" alt="Autres">
+                    <img src="Photo/logoequipe.png" alt="Autres">
                     <p>Travail en équipe</p>
                 </div>
             </div>
