--- a/Sae1.html
+++ b/Sae1.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="outil-box">
                     <p>Canva</p>
-                    <img src="photo/logocanva.png" alt="Canva">
+                    <img src="Photo/logocanva.png" alt="Canva">
                 </div>
                 <div class="outil-box">
                     <p>Travail en équipe</p>
