--- a/Sae1.html
+++ b/Sae1.html
@@ -34,11 +34,11 @@
             <div class="Outils">
                 <div class="outil-box">
                     <p>Excel</p>
-                    <img src="photo/logoexcel.png" alt="Excel">
+                    <img src="Photo/logoexcel.png" alt="Excel">
                 </div>
                 <div class="outil-box">
                     <p>SAS</p>
-                    <img src="photo/logosas.png" alt="SAS">
+                    <img src="Photo/logosas.png" alt="SAS">
                 </div>
                 <div class="outil-box">
                     <p>Canva</p>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="outil-box">
                     <p>Travail en équipe</p>
-                    <img src="photo/logoequipe.png" alt="Travail en équipe">
+                    <img src="Photo/logoequipe.png" alt="Travail en équipe">
                 </div>
             </div>
         </section>
