--- a/Sae1.html
+++ b/Sae1.html
@@ -66,7 +66,7 @@
             <h2>Exemples</h2>
             <div class="Exemples">
                 <p>Redressement :</p>
-                <img src="photo/sondage1.png" alt="Sondage 1">
+                <img src="Photo/sondage1.PNG" alt="Sondage 1">
             </div>
             <div class="Exemples">
                 <p>Redressement :</p>
