--- a/Sae1.html
+++ b/Sae1.html
@@ -70,11 +70,11 @@
             </div>
             <div class="Exemples">
                 <p>Redressement :</p>
-                <img src="photo/sondage2.png" alt="Sondage 2">
+                <img src="Photo/sondage2.PNG" alt="Sondage 2">
             </div>
             <div class="Exemples">
                 <p>Graphique croisant le statut et la question "À quelle fréquence utilisez-vous l'IA ?" :</p>
-                <img src="photo/sondage3.png" alt="Sondage 3">
+                <img src="Photo/sondage3.PNG" alt="Sondage 3">
             </div>
         </section>
     </main>
