--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section id="presentation">
             <h2>Présentation</h2>
-            <img src="Photo/Photovisage.png" alt="Photo de Célia Zuk" style="display: block; margin: 20px auto; border-radius: 50%; width: 150px;">
+            <img src="Photo/photovisage.png" alt="Photo de Célia Zuk" style="display: block; margin: 20px auto; border-radius: 50%; width: 150px;">
 			<h3> Présentation générale :</h3>
             <p>Bonjour, je m'appelle Célia Zuk, je suis actuellement en deuxième année de Bachelor universitaire de technologie en sciences des données parcours exploration et modélisation statistique. Je réalise mon BUT au sein de l'IUT Paris - Rives de Seine, situé à Paris dans le 16ème arrondissement. Passionnée par l’analyse et la visualisation des données, j’ai développé des compétences en programmation (R, Python, SAS, SQL) et en création de tableaux de bord interactifs avec Power BI et Excel. </p>
 			
