--- a/Sae2.html
+++ b/Sae2.html
@@ -39,7 +39,7 @@
             <div class="Outils">
                 <div class="outil-box">
                     <p>SAS</p>
-                    <img src="photo/logosas.png" alt="SAS">
+                    <img src="Photo/logosas.png" alt="SAS">
                 </div>
                 <div class="outil-box">
                     <p>Canva</p>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="outil-box">
                     <p>Travail en équipe</p>
-                    <img src="photo/logoequipe.png" alt="Travail en équipe">
+                    <img src="Photo/logoequipe.png" alt="Travail en équipe">
                 </div>
             </div>
         </section>
