--- a/Sae2.html
+++ b/Sae2.html
@@ -68,15 +68,15 @@
             <h2>Exemples</h2>
             <div class="Exemples">
                 <p>Exemple proc import :</p>
-                <img src="photo/codesas1.png" alt="Exemples">
+                <img src="Photo/codesas1.PNG" alt="Exemples">
             </div>
             <div class="Exemples">
                 <p>Création des dossiers afin d’organiser les données exportées :</p>
-                <img src="photo/codesas2.png" alt="Exemples">
+                <img src="Photo/codesas2.PNG" alt="Exemples">
             </div>
             <div class="Exemples">
                 <p>Exportation des données :</p>
-                <img src="photo/codesas3.png" alt="Exemples">
+                <img src="Photo/codesas3.PNG" alt="Exemples">
             </div>
         </section>
     </main>
