--- a/Sae3.html
+++ b/Sae3.html
@@ -37,19 +37,19 @@
             <div class="Outils">
                 <div class="outil-box">
                     <p>Excel</p>
-                    <img src="photo/logoexcel.png" alt="Excel">
+                    <img src="Photo/logoexcel.png" alt="Excel">
                 </div>
                 <div class="outil-box">
                     <p>R</p>
-                    <img src="photo/logor.png" alt="R">
+                    <img src="Photo/logor.png" alt="R">
                 </div>
                 <div class="outil-box">
                     <p>Word</p>
-                    <img src="photo/logoword.png" alt="Word">
+                    <img src="Photo/logoword.png" alt="Word">
                 </div>
                 <div class="outil-box">
                     <p>Travail en équipe</p>
-                    <img src="photo/logoequipe.png" alt="Travail en équipe">
+                    <img src="Photo/logoequipe.png" alt="Travail en équipe">
                 </div>
             </div>
         </section>
