--- a/Sae3.html
+++ b/Sae3.html
@@ -70,19 +70,19 @@
             <h2>Exemples</h2>
             <div class="Exemples">
                 <p>Création de série temporelle :</p>
-                <img src="photo/serietemp.png" alt="Série temporelle">
+                <img src="Photo/serietemp.PNG" alt="Série temporelle">
             </div>
             <div class="Exemples">
                 <p>Ajustement des modèles paramétriques :</p>
-                <img src="photo/serietemp2.png" alt="Série temporelle">
+                <img src="Photo/serietemp2.PNG" alt="Série temporelle">
             </div>
             <div class="Exemples">
                 <p>Prévisions avec le modèle ARIMA :</p>
-                <img src="photo/serietemp3.png" alt="Série temporelle">
+                <img src="Photo/serietemp3.PNG" alt="Série temporelle">
             </div>
             <div class="Exemples">
                 <p>Régression linéaire :</p>
-                <img src="photo/serietemp4.png" alt="Série temporelle">
+                <img src="Photo/serietemp4.PNG" alt="Série temporelle">
             </div>
         </section>
     </main>
