--- a/Sae3.html
+++ b/Sae3.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="outil-box">
                     <p>R</p>
-                    <img src="Photo/logor.png" alt="R">
+                    <img src="Photo/logoR.png" alt="R">
                 </div>
                 <div class="outil-box">
                     <p>Word</p>
