--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -44,7 +44,7 @@
 			<p> Adresse Mail : celia.zuk2@gmail.com</p>
 			<p> Numéro de téléphone : +33 6 69 58 52 18 </p>
 			
-			<p><a href="Photo/CV_Zuk_Celia.pdf" class="button">Voir mon CV</a></p>
+			<p><a href="Photo/CV_Celia_Zuk_.pdf" class="button">Voir mon CV</a></p>
         </section>
 
         <section id="formations">
@@ -229,3 +229,4 @@
     </footer>
 </body>
 </html>
+
